# Financial-Quantification---Reading-Binance-Trading-Data

./: CMakeLists.txt  OrderUpdate.hpp  reader.cpp
金融量化-读取币安交易数据/: README.md  main.cpp
